02-kube-news/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-news-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-news-app
  template:
    metadata:
      labels:
        app: kube-news-app
    spec:
      containers:
      - name: kube-news-app
        image: erickmanovei/kube-news:v3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-news-service
spec:
  type: LoadBalancer # se quiser expor o serviço externamente direto, mas o correto é que a exposição seja feita via Ingress, então o correto aqui é ser do tipo ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kube-news-app
