02-kube-news/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-news-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.desenlike.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-news-service
            port:
              number: 80
  tls:
  - hosts:
    - kubernetes.desenlike.com.br
    secretName: certificate-kube-news
